syntax = "proto3";

package go.micro.srv.GetSmsCd;

service Example {
	rpc GetSmsCd(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Uuid = 1;
	string Mobile = 2;
	string Text = 3;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
}
